--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
       "redux-thunk": "^2.3.0"
     },
     "scripts": {
+      "serve": "node index.js",
       "start": "react-scripts start",
       "build": "react-scripts build",
       "test": "react-scripts test",
