--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "dependencies": {
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.2.1",
+    "@quentin-sommer/react-useragent": "^3.1.0",
     "body-parser": "^1.19.0",
     "connect-cas": "^1.8.1",
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
     "express-session": "^1.17.0",
+    "express-useragent": "^1.0.13",
     "formik": "^1.5.8",
     "js-cookie": "^2.2.1",
     "material-ui-popup-state": "^1.4.1",
