--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^4.2.1",
     "@quentin-sommer/react-useragent": "^3.1.0",
     "body-parser": "^1.19.0",
+    "chart.js": "^2.9.3",
     "connect-cas": "^1.8.1",
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
@@ -16,8 +17,10 @@
     "formik": "^1.5.8",
     "js-cookie": "^2.2.1",
     "material-ui-popup-state": "^1.4.1",
+    "moment": "^2.24.0",
     "nodejs-cas": "^1.0.12",
     "react": "^16.11.0",
+    "react-chartjs-2": "^2.8.0",
     "react-checkbox-group": "^5.0.2",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
