--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "proxy": "http://10.10.9.156:8080",
   "private": true,
   "dependencies": {
+    "@bumaga/tabs": "^0.2.0",
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.2.1",
     "@quentin-sommer/react-useragent": "^3.1.0",
